--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
                   </button>
                   <div class="collapse" id="collapseETS">
                     <div class="card card-body">
+                      <p class="text-partner">
+                        Empresa de iniciativa privada, 100% Mexicana
+                        comprometidos con la educación y la distribución de
+                        Eco-tecnologías aplicadas en la industria, siendo
+                        reconocidos por las mejores marcas en sus divisiones de
+                        sustentabilidad.
+                      </p>
                       <p>
                         <a
                           href="https://escuelaentecnologiassustentables.com/"
@@ -238,6 +245,45 @@
                       <p>
                         <a
                           href="http://www.clusterinteroceanico.com/"
+                          class="link-partner"
+                          target="_blank"
+                        >
+                          Sitio Web
+                          <i class="fas fa-external-link-alt link-icon"></i>
+                        </a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="logo-partners">
+                <div class="element-collapse">
+                  <img src="img/MAXIMA-logo.png" alt="" class="img-logo" />
+                </div>
+                <div class="element-collapse">
+                  <button
+                    class="btn btn-outline-success btn-sm"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#collapseMAXIMA"
+                    aria-expanded="false"
+                    aria-controls="collapseMAXIMA"
+                  >
+                    <i class="fas fa-info"></i> Info
+                  </button>
+                  <div class="collapse" id="collapseMAXIMA">
+                    <div class="card card-body">
+                      <p class="text-partner">
+                        Máxima iluminación, expertos en proyectos de iluminación
+                        LED, contamos con una gama de servicios especializados
+                        dentro de un proyecto de iluminación: Análisis de su
+                        situación lumínica, Diagnóstico, Proyección, Venta e
+                        Instalación y Servicio Posventa. México.
+                      </p>
+                      <p>
+                        <a
+                          href="http://maximailuminacion.mx/"
                           class="link-partner"
                           target="_blank"
                         >
