--- a/index.html
+++ b/index.html
@@ -376,6 +376,41 @@
                   </div>
                 </div>
               </div>
+
+              <div class="logo-partners">
+                <div class="element-collapse">
+                  <img src="img/SOLAR-logo.png" alt="" class="img-logo" />
+                </div>
+                <div class="element-collapse">
+                  <button
+                    class="btn btn-outline-success btn-sm"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#collapseSOLAR"
+                    aria-expanded="false"
+                    aria-controls="collapseSOLAR"
+                  >
+                    <i class="fas fa-info"></i> Info
+                  </button>
+                  <div class="collapse" id="collapseSOLAR">
+                    <div class="card card-body">
+                      <p class="text-partner">
+                        Directorio comercial más grande de la industria solar en México.
+                      </p>
+                      <p>
+                        <a
+                          href="https://www.solarconnect.com.mx/"
+                          class="link-partner"
+                          target="_blank"
+                        >
+                          Sitio Web
+                          <i class="fas fa-external-link-alt link-icon"></i>
+                        </a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="modal-footer d-flex justify-content-center">
