--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <body>
     <!-- ID Particles.js -->
-    <div id="particles-js"></div>
+    <div id="particles-js" data-aos="zoom-in" data-aos-duration="1500"></div>
 
     <!--LOGO GAMA ALTA-->
     <div id="contenedor">
@@ -63,6 +63,7 @@
         <img
           data-aos="zoom-in"
           data-aos-duration="2500"
+          data-aos-delay="1000"
           class="lgama"
           src="./img/logo3.png"
           id="logo"
@@ -73,7 +74,8 @@
         />
         <img
           data-aos="zoom-in"
-          data-aos-duration="2000"
+          data-aos-duration="3000"
+          data-aos-delay="2000"
           class="tgama"
           src="./img/letras.png"
           id="letras"
@@ -88,7 +90,8 @@
           autoplay
           loop
           data-aos="zoom-in-right"
-          data-aos-duration="2000"
+          data-aos-duration="800"
+          data-aos-delay="1000"
         >
           <source src="img/Rayos.mp4" type="video/mp4" />
         </video>
@@ -425,6 +428,13 @@
         </div>
       </div>
     </div>
+
+    <!--Footer-->
+    <footer class="footer">
+      <div class="footer-element1">&copy Copyright Gama Alta 2.0 2020</div>
+      <div class="footer-element"></div>
+      <div class="footer-element3">Code & design by Roberto Monjardin</div>
+    </footer>
 
     <!--Animate AOS-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
