--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               class="modal-title d-flex justify-content-center"
               id="staticBackdropLabel"
             >
-              Unidades de Negocio
+              Colaboradores
             </h5>
             <button
               type="button"
